# ome-slicer

./: README.md  pyproject.toml
omeslicer/: __init__.py  _version.py  core.py
