[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ome-slicer"
version = "0.1.0"
description = "Efficient OME-TIFF manipulation for large datasets"
authors = [
    {name = "Jason L Weirather", email = "jason.weirather@gmail.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ome-tiff", "imaging", "image processing", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.urls]
"Source" = "https://github.com/yourusername/ome-slicer"
"Tracker" = "https://github.com/yourusername/ome-slicer/issues"

[project.dependencies]
numpy = ">=1.20"
tifffile = ">=2023.7.18"
pyvips = ">=2.1"
ome-types = ">=0.2.9"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.setuptools.packages.find]
where = ["omeslicer"]

[tool.black]
line-length = 88

