[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ome-slicer"
version = "0.1.0"
description = "Efficient OME-TIFF manipulation for large datasets"
authors = [
    {name = "Jason L Weirather", email = "jason.weirather@gmail.com"}
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ome-tiff", "imaging", "image processing", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "numpy >= 1.20",
  "tifffile >= 2023.7.10",
  "pyvips >= 2.2.3",
  "ome-types >= 0.5.2"
]

[project.urls]
"Source" = "https://github.com/jason-weirather/ome-slicer"
"Tracker" = "https://github.com/jason-weirather/ome-slicer/issues"

